[update] feedとfavoriteAPIのレスポンスにtotalnumber追加 (#293)
* [add] is_favorite_flg_2_review_feed_&_favorite

* [add] is_favorite_flg_2_post_feed_&_favorite

* [update] main_pkg

* Update swagger.yaml

* [fix] typo
