# cmd/app/main.go
@@ -94,17 +94,15 @@ func setRoutes(app *App) {
 		users.PUT("", auth.Require(app.UserCommandController.Update))
 		users.GET("", auth.Require(app.UserQueryController.MyPage))
 		users.GET("/:uid", app.UserQueryController.Show)
-		users.GET("/:id/posts/feed", app.PostQueryController.ListFeedPost)
-		users.GET("/:id/reviews/feed", app.ReviewQueryController.ListFeedReview)
 		users.GET("/ranking", app.UserQueryController.ShowUserRanking)
 		users.POST("/:id/follow", auth.Require(app.UserCommandController.Follow))
 		users.DELETE("/:id/follow", auth.Require(app.UserCommandController.Unfollow))
 		users.GET("/:id/following", app.UserQueryController.ListFollowingUsers)
 		users.GET("/:id/followed", app.UserQueryController.ListFollowedUsers)
-		users.GET("/:id/feed/posts", app.PostQueryController.ListFeedPost)
-		users.GET("/:id/feed/reviews", app.ReviewQueryController.ListFeedReview)
-		users.GET("/:id/favorite/posts", app.PostQueryController.ListFavoritePost)
-		users.GET("/:id/favorite/reviews", app.ReviewQueryController.ListFavoriteReview)
+		users.GET("/:id/feed/posts", auth.Optional(app.PostQueryController.ListFeedPost))
+		users.GET("/:id/feed/reviews", auth.Optional(app.ReviewQueryController.ListFeedReview))
+		users.GET("/:id/favorite/posts", auth.Optional(app.PostQueryController.ListFavoritePost))
+		users.GET("/:id/favorite/reviews", auth.Optional(app.ReviewQueryController.ListFavoriteReview))
 		users.GET("/favorite/reviews/:id", auth.Optional(app.UserQueryController.ListFavoriteReviewUser))
 		users.GET("/favorite/posts/:id", auth.Optional(app.UserQueryController.ListFavoritePostUser))
 	}
